--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,23 @@
+body, html {
+  height: 100%;
+  display: grid;
+}
+
 p {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Rubik', sans-serif;
+}
+
+#name{
+font-family: 'Anton', sans-serif;
+}
+
+#center{
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  outline: 2px solid red;
+    margin: auto;
+
   }
