--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   display: grid;
 }
@@ -7,17 +8,15 @@ p {
   font-family: 'Rubik', sans-serif;
 }
 
-#name{
-font-family: 'Anton', sans-serif;
+#name {
+  font-family: 'Anton', sans-serif;
 }
 
-#center{
+#center {
   display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  outline: 2px solid red;
-    margin: auto;
+  justify-content: center;
+  align-items: center;
+  outline: 1px solid red;
+  margin: auto;
 
-  }
+}
